Simplify CRUD web application example.

--- a/example/quickcheck-state-machine-example.cabal
+++ b/example/quickcheck-state-machine-example.cabal
@@ -32,6 +32,7 @@ library
                      , quickcheck-instances
                      , quickcheck-state-machine
                      , random
+                     , resourcet
                      , servant
                      , servant-client
                      , servant-server
