--- a/quickcheck-state-machine.cabal
+++ b/quickcheck-state-machine.cabal
@@ -18,7 +18,6 @@ tested-with:         GHC == 8.0.2
 library
   hs-source-dirs:      src
   exposed-modules:     Test.StateMachine
-                     , Test.StateMachine.Deprecated
                      , Test.StateMachine.Internal.AlphaEquality
                      , Test.StateMachine.Internal.Parallel
                      , Test.StateMachine.Internal.ScopeCheck
@@ -29,6 +28,7 @@ library
                      , Test.StateMachine.Internal.Utils.BoxDrawer
                      , Test.StateMachine.Types
                      , Test.StateMachine.Types.HFunctor
+                     , Test.StateMachine.Types.History
                      , Test.StateMachine.Types.References
   build-depends:       ansi-wl-pprint (>=0.6.7.3 && <0.7)
                      , async
